# SimplesNacional

./: LICENSE  README.md  pyproject.toml  setup.py
simplesnacional/: __init__.py
simplesnacional.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
